
This file shows the changes in recent releases of MODx. The most current release is usually the 
development release, and is only shown to give an idea of what's currently in the pipeline.


MOD 0.9.5 beta 5 (rev 1740 - October 19, 2006)
====================================
* Minor tweak to ajax login page and tree nodes. (1713)
* Added ajax support to login page. (1712)
* Added manager_lockout_message to english.inc.php. (1712)
* Added support for allow_manager_access user setting. (1712)
* Added manager.lockout.inc.php and manager.lockout.html. (1712)
* Fixed warnings with undeclared arrays in save_user.processor.php. (1714)
* Added login.html to other themes. (1710)
* Separate manager login logic from content page (see login.html). (1709)
* Fix bug with tree and deleted documents. (1709)
* Fix session timeout bug when expanding nodes. (1709)
* Remove any remaining placeholders from output in new welcome.static.php. (1706)
* [FS#203] Added default publish permission value to system settings. (1702)
* Remove broken image icons from error.js (1703)
* Fix the 'Remove Locks' functionality. (1700)
* New Installer Theme. (1699)
* Added setup.updates.sql that contains the UPDATE queries to run at end of install script. (1697)
* updated eForm to version 1.4
* separate welcome page logic from UI (welcome.html in manager themes) to allow theme designer to easily style of welcome page
* fix js bug with "Access Permissions" checkbox in mutate_content, mutate_module, mutate_tmpvar
* fix: hide working status after module loads
* fix js bug in mutate_content: tpSetting was not defined
* fix: context menu in MODx theme + updates
* [FS#203] Introducing 'publish' permission.
* Bugfix: Set correct default value for language select box (edit user dlg)
* Cosmetics: Removed zero-value from phone and mobile of default admin
* Cosmetics: Ordering phone/mobile/fax input fields (edit user dlg)
* [FS#366] (1644)
* [FS#309] Additional fix applied. (1641)